prom_grafana/ingress_classic_version/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - grafana.minikube
      secretName: grafana-tls
  rules:
  - host: grafana.minikube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
